# python-qinlingclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  README.rst  lower-constraints.txt  requirements.txt  run_tests.sh  setup.cfg  setup.sh  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/cli/: index.rst
doc/source/cli/osc/v1/: qinling.rst
doc/source/install/: index.rst
qinlingclient/: __init__.py  client.py  i18n.py  utils.py  version.py
qinlingclient/common/: base.py  exceptions.py  http.py
qinlingclient/osc/: plugin.py
qinlingclient/osc/v1/: base.py  function.py  function_alias.py  function_execution.py  function_version.py  function_worker.py  job.py  runtime.py  webhook.py
qinlingclient/tests/unit/: base.py  fakes.py  test_client.py
qinlingclient/tests/unit/osc/v1/: fakes.py  test_function.py  test_function_alias.py  test_function_execution.py  test_function_version.py  test_function_worker.py  test_job.py  test_runtime.py  test_webhook.py
qinlingclient/tests/unit/v1/: test_client.py  test_function.py  test_function_alias.py  test_function_execution.py  test_function_version.py  test_function_worker.py  test_job.py  test_runtime.py  test_webhook.py
qinlingclient/v1/: client.py  function.py  function_alias.py  function_execution.py  function_version.py  function_worker.py  job.py  runtime.py  webhook.py
releasenotes/notes/: add-support-function-alias-for-execution-and-webhook-8df54e2fe4a27779.yaml  deprecate-code-type-05211c5cf8cf5c51.yaml  drop-py-2-7-1fefd2071a107cc7.yaml  fix-webhook-update-version-4c79ac51af5656dd.yaml  function-aliasing-299f134f370d0681.yaml  function-timeout-f4c9d6d8ea2c7204.yaml  function-versioning-81881bc35bc3eb64.yaml  get-runtime-pool-d263e74d21b27091.yaml  support-function-alias-for-job-eb10994cac2c11e9.yaml  support-function-resource-limitation-f6f519999f5e23cd.yaml  support-function-version-for-job-7cb12ebb9fd64456.yaml  support-function-version-for-webhook-67beca9f1c78eb58.yaml  support-name-function-operation-1d32c4c2fc58bf26.yaml  support-resource-name-cd26d0edbd56bdc5.yaml  support-untrusted-runtime-72739ab479265d81.yaml
releasenotes/source/: conf.py  index.rst
tools/: cover.sh  install_venv.py  install_venv_common.py  tox_install.sh
