[metadata]
name = python-qinlingclient
summary = python-qinlingclient
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/qinling/
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
        qinlingclient

[entry_points]
console_scripts =
    qinling = qinlingclient.shell:main

openstack.cli.extension =
    function_engine = qinlingclient.osc.plugin

openstack.function_engine.v1 =
    runtime_list = qinlingclient.osc.v1.runtime:List
    runtime_create = qinlingclient.osc.v1.runtime:Create
    runtime_delete = qinlingclient.osc.v1.runtime:Delete
    runtime_show = qinlingclient.osc.v1.runtime:Show

    function_list = qinlingclient.osc.v1.function:List
    function_create = qinlingclient.osc.v1.function:Create
    function_delete = qinlingclient.osc.v1.function:Delete
    function_show = qinlingclient.osc.v1.function:Show
    function_update = qinlingclient.osc.v1.function:Update
    function_detach = qinlingclient.osc.v1.function:Detach
    function_download = qinlingclient.osc.v1.function:Download

    function_worker_list = qinlingclient.osc.v1.function_worker:List

    function_execution_list = qinlingclient.osc.v1.function_execution:List
    function_execution_create = qinlingclient.osc.v1.function_execution:Create
    function_execution_delete = qinlingclient.osc.v1.function_execution:Delete
    function_execution_show = qinlingclient.osc.v1.function_execution:Show
    function_execution_log_show = qinlingclient.osc.v1.function_execution:LogShow

    job_list = qinlingclient.osc.v1.job:List
    job_create = qinlingclient.osc.v1.job:Create
    job_delete = qinlingclient.osc.v1.job:Delete
    job_show = qinlingclient.osc.v1.job:Show
    job_update = qinlingclient.osc.v1.job:Update

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
